--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "mocha": "^5.0.4",
     "mysql2": "^1.x",
     "pg": "^7.x",
+    "oracledb": "^1.13.1",
     "pg-hstore": "^2.3.2",
     "pg-native": "^2.x",
     "pg-types": "^1.x",
@@ -116,6 +117,7 @@
     "test-unit-postgres-native": "cross-env DIALECT=postgres-native npm run test-unit",
     "test-unit-sqlite": "cross-env DIALECT=sqlite npm run test-unit",
     "test-unit-mssql": "cross-env DIALECT=mssql npm run test-unit",
+    "test-unit-oracle": "cross-env DIALECT=oracle npm run test-unit",
     "test-unit-all": "npm run test-unit-mysql && npm run test-unit-postgres && npm run test-unit-postgres-native && npm run test-unit-mssql && npm run test-unit-sqlite",
     "test-integration": "mocha $npm_package_options_mocha \"test/integration/**/*.test.js\"",
     "test-integration-mysql": "cross-env DIALECT=mysql npm run test-integration",
@@ -131,6 +133,7 @@
     "test-postgres-native": "cross-env DIALECT=postgres-native npm test",
     "test-postgresn": "npm run test-postgres-native",
     "test-mssql": "cross-env DIALECT=mssql npm test",
+    "test-oracle": "cross-env DIALECT=oracle npm test",
     "test-all": "npm run test-mysql && npm run test-sqlite && npm run test-postgres && npm run test-postgres-native && npm run test-mssql",
     "cover": "rimraf coverage && npm run teaser && npm run cover-integration && npm run cover-unit && npm run merge-coverage",
     "cover-integration": "cross-env COVERAGE=true ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -t 30000 --exit --ui tdd \"test/integration/**/*.test.js\" && node -e \"require('fs').renameSync('coverage/lcov.info', 'coverage/integration.info')\"",
@@ -140,6 +143,7 @@
     "sscce-mysql": "cross-env DIALECT=mysql npm run sscce",
     "sscce-postgres": "cross-env DIALECT=postgres npm run sscce",
     "sscce-sqlite": "cross-env DIALECT=sqlite npm run sscce",
+    "sscce-oracle": "cross-env DIALECT=oracle npm run sscce",
     "commitmsg": "validate-commit-msg",
     "semantic-release": "semantic-release"
   },
